--- a/style.css
+++ b/style.css
@@ -4,5 +4,133 @@ body {
     font-size: 18px;
     font-weight: 300;
     line-height: 26px;
-    color: darkgoldenrod;
+    color: rgb(0, 0, 0);
 }
+
+h1, h2, h3, h5, h6 {
+    font-weight: 700;
+    color: darkgoldenrod;
+
+}
+
+
+h1 {
+    font-size: 48px;
+    line-height: 58px;
+}
+
+h2 {
+    font-size: 38px;
+    line-height: 48px;
+}
+
+.img-responsive {
+    width: 100%;
+    height: auto;
+}
+nav {
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+nav img {
+    width: 150px;
+    height: 76;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+
+}
+
+nav ul {
+    list-style: none;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+nav ul li:not(:last-child){
+    margin-right: 25px;
+
+}
+
+nav ul li a:link,
+nav ul li a:visited 
+.nav-link {
+    font-size: 14px;
+    font-weight: 400;
+    text-transform: uppercase;
+    letter-spacing: .5px;
+    color: rgb(185, 185, 185);
+    transition: color.3s;
+}
+
+nav ul li a:hover,
+nav ul li a:active
+.nav-link{
+   
+    color: rgb(68, 65, 65);
+     }
+
+     header{
+         width: 100%;
+         height: 100vh;
+         background-color: lightyellow;
+          }
+     header h1{
+         margin-top: 200px;
+         
+     }      
+
+     .gris{
+         color: goldenrod;
+
+     }
+
+     .img-proyecto{
+         margin: 50px auto;
+     }
+
+     .proyecto{
+         margin-bottom: 100px;
+         display: flex;
+         flex-direction: column;
+         justify-content: flex-end;
+         align-items: flex-start
+         ;
+     }
+
+     .proyecto h2{
+        margin-bottom: 10px;
+     }
+
+     .proyecto p {
+         margin-bottom: 30px;
+
+     }
+     .enlace a:link,
+     .enlace a:visited {
+         font-size: 14px;
+         font-weight: 600;
+         text-transform: uppercase;
+         text-decoration: none;
+         letter-spacing: 1px;
+         color: grey;
+         transition: color.3s;
+     }
+     
+     .enlace a:hover,
+     .enlace a:active{
+         color: rgb(196, 196, 196)
+
+     }
+
+     footer{
+         width: 100%;
+         height: 200px;
+         background-color: khaki;
+         display: flex;
+         align-items: center;
+     }
