--- a/style.css
+++ b/style.css
@@ -7,6 +7,11 @@ body {
     color: rgb(0, 0, 0);
 }
 
+section {
+    background-color: lightyellow;
+}
+
+
 h1, h2, h3, h5, h6 {
     font-weight: 700;
     color: darkgoldenrod;
@@ -37,11 +42,12 @@ nav {
 }
 
 nav img {
-    width: 150px;
-    height: 76;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
+    width: 190px;
+    height: auto;
+    float: right;
+    justify-content: flex-end;
+    margin-top: 50px;
+    margin-bottom: auto;
 
 }
 
@@ -80,13 +86,18 @@ nav ul li a:active
          background-color: lightyellow;
           }
      header h1{
-         margin-top: 200px;
+         margin-top: 100px;
          
      }      
 
      .gris{
          color: goldenrod;
 
+     }
+
+     .foto{ 
+         display: block;
+         margin: auto;
      }
 
      .img-proyecto{
@@ -134,3 +145,31 @@ nav ul li a:active
          display: flex;
          align-items: center;
      }
+     footer .copy  {
+         display: flex;
+         justify-content: start;
+     }
+
+     footer .social 
+    {
+
+         display: flex;
+         justify-content: flex-end;
+     }
+
+     footer .social ul {
+        display: flex;
+        list-style: none;
+     }
+
+     footer .social ul li a img {
+         width: 40px;
+         height: 40px;
+    }
+     
+    @media only screen and (max-width: 768px){
+        nav img { 
+            justify-content: center;
+            margin: 30px auto;
+        }
+    }
